<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">OpenTadam</string>
    <string name="done_button">Далее</string>
    <string name="navigation_get_taxi">Вызов такси</string>
    <string name="registration_title">Регистрация</string>
    <string name="how_much">Расчет по таксометру</string>
    <string name="comment_text">Например, нужен пустой багажник</string>
    <string name="add_adress">Адрес назначения</string>
    <string name="error_phone">Проверьте количество цифр в номере телефона.</string>
    <string name="send_ok">Запрос звонка отправлен</string>
    <string name="error_code">Количество цифр в номере коде не равно четырем.</string>
    <string name="ordering_deleted">Заказ удален</string>
    <string name="help_ordering_deleted">Вы действительно хотите отменить этот заказ?</string>
    <string name="necessary_register">Необходимо пройти регистрацию</string>
    <string name="car_assigned">Машина назначена</string>
    <string name="car_assigned_caps">МАШИНА НАЗНАЧЕНА</string>
    <string name="ok">OK</string>
    <string name="car_wait">Машина ожидает</string>
    <string name="car_wait_caps">МАШИНА ОЖИДАЕТ</string>
    <string name="search_car">Ищем машину</string>
    <string name="search_car_caps">ЗАКАЗ ОФОРМЛЕН</string>
    <string name="order_work">Заказ выполняется</string>
    <string name="order_work_caps">ЗАКАЗ ВЫПОЛНЯЕТСЯ</string>
    <string name="YES">ДА</string>
    <string name="NO">НЕТ</string>
    <string name="code_send_to_phone">Код регистрации выслан на номер</string>
    <string name="button_get_call">Получить звонок</string>
    <string name="finich_title_value">Поездка завершена</string>
    <string name="itog_text">ИТОГО</string>
    <string name="list_orders_nistory">История заказов</string>
    <string name="navigation_phone">Телефон</string>
    <string name="set_image">Выберите картинку</string>
    <string name="reload_foto">Изменить фото</string>
    <string name="get_version">Версия</string>
    <string name="get_new_version">Скачать новую версию\n</string>
    <string name="current_order">Текущий заказ</string>
    <string name="continue_button">Готово</string>
    <string name="error_val_code">Неверный код подтверждения</string>
    <string name="set_rating">Оценка %1$s установлена.</string>
    <string name="distance_formated_value">#.#км</string>
    <string name="private_order">Мои заказы</string>
    <string name="fix_cost">стоимость</string>
    <string name="tilda" translatable="false">~</string>
    <string name="number_flat">Номер квартиры</string>
    <string name="number_porcht">Номер подъезда</string>
    <string name="hint_dop_info">Как подъехать (например, к шлагбауму)</string>
    <string name="comment_text_dop">Комментарий к адресу</string>
    <string name="order_history_empty_text">Нет заказов</string>
    <string name="error_upd_google">Ошибка перехода на Google Play. Попробуйте самостоятельно обновить приложение в Google Play</string>
    <string name="current">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="hour_reduced">" ч "</string>
    <string name="minutes_reduced">" мин"</string>
    <string name="title_FProlongation">Продлить ожидание</string>
    <string name="prolongation_text_info">К сожалению, мы не нашли вам\nмашину. Продлите время\nожидания или отмените заказ.</string>
    <string name="f_set_prolongation_minute_value">мин</string>
    <string name="f_set_prolongation_value_add_value">продлить\nожидание</string>
    <string name="delete_route">отменить заказ</string>
    <string name="adr_value_def">По городу</string>
    <string name="privacy_policy_value"><u>Политика конфиденциальности</u></string>
    <string name="confirm_phone">Подтвердить номер</string>
    <string name="request_code">Запросить код</string>
    <string name="send_ok_code">Запрос повторной СМС с кодом отправлен</string>
    <string name="info_reguest_driver">Запрос звонка отправлен</string>
    <string name="porch_min">п.</string>
    <string name="flat_min">кв.</string>
    <string name="title_time">Время заказа</string>
    <string name="point_to_maps">Точка на карте</string>
    <string name="error_phone_number_info">Ошибка набора номера телефона</string>
    <string name="order_double_value">повторить заказ</string>
    <string name="order_revers_value">обратный маршрут</string>
    <string name="update_geo_zone">На данной территории действуют другие тарифы</string>
    <string name="error_create_route">Невозможно оформить заказ</string>
    <string name="bonus_account_client">Бонусный счет</string>
    <string name="payment_bonuses">Оплатить часть поездки бонусами</string>
    <string name="info_text_bonus">При меньшей стоимости поездки остаток\nсуммы вернется на ваш бонусный счет</string>
    <string name="error_google_services">Это устройство не поддерживает сервисы Google.</string>
    <string name="info_restart">Обновите сервисы GooglePlay и перезапустите приложение</string>
    <string name="min_bonus_format">минимум\n%1$s%2$s</string>
    <string name="max_bonus_format">максимум\n%1$s%2$s</string>
    <string name="call_dispatcher">Связь с диспетчером</string>
    <string name="tab_private">рядом</string>
    <string name="tab_history">история</string>
    <string name="start_adress_route">Адрес подачи</string>
    <string name="title_set_options">Опции автомобиля</string>
    <string name="title_set_comment_order">Комментарий</string>
    <string name="cash">Наличные</string>
    <string name="ot">от</string>
    <string name="car_wait_info">Вас ожидает</string>
    <string name="title_set_code">Подтверждение номера</string>
    <string name="hint_edit_adress0">Куда подать машину?</string>
    <string name="order_details">Подробности</string>
    <string name="to_vojge">Куда поедем?</string>
    <string name="title_dialog_add_private_point">название адреса</string>
    <string name="button_dialog_cancel">отмена</string>
    <string name="button_add_private_point">добавить</string>
    <string name="error_edit_empty">Пустое поле названия адреса</string>
    <string name="sucsess_add_adress">адрес добавлен</string>
    <string name="my_point_info_delete_poin">Адрес удален из списка</string>
    <string name="my_adress_edit_title">Мой адрес</string>
    <string name="my_point_name">название адреса</string>
    <string name="mame_hint">Название</string>
    <string name="text_button_add_my_point">добавить в мои адреса</string>
    <string name="create_adress">Введите адрес</string>
    <string name="set_bonuses_to_route">Оплатить бонусами</string>
    <string name="prefix_popup_tarif_min_cost">от</string>
    <string name="profile_dialog_title">добавить фото</string>
    <string name="profile_dialog_camera">Камера</string>
    <string name="profile_dialog_gal">Галерея</string>
    <string name="error_camera">Ваше устройство не поддерживает съемку</string>
    <string name="text_block_call">Не хочу получать звонки</string>
    <string name="text_block_sms">Не хочу получать СМС</string>
    <string name="maps_setting_profile">Карта</string>
    <string name="title_dialog_maps">карта</string>
    <string name="tab_searsh_private">Мои</string>
    <string name="value_button_continue">Далее</string>
    <string name="value_info_conf">Нажимая кнопку \"Далее\", я принимаю условия</string>
    <string name="sub_info_conf">Пользовательского соглашения</string>
    <string name="message_dialog_repl_phone">Изменение номера телефона очистит профиль, историю поездок, бонусы и платежную информацию</string>
    <string name="title_dialog_repl_phone">изменить номер</string>
    <string name="cancel_button_dialog_repl">отменить</string>
    <string name="continue_button_dialog_repl">далее</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="no_name_my_point">Имя не указано</string>
    <string name="title_cash_value">Способ оплаты</string>
    <string name="empty_options">нет доступных опций</string>
    <string name="go_to_car">Выхожу</string>
    <string name="error_user_policy_private">Доступ к камере запрещен натройками пользователя.</string>
    <string name="method_cash">Наличные</string>
    <string name="value_info_conf_two_sub">Политики конфиденциальности</string>
    <string name="title_set_phone_number">Укажите номер вашего мобильного телефона</string>
    <string name="select_app">Выбрать</string>
    <string name="hint_value_sms">Код из СМС</string>
    <string name="fsv_value_car_arr">Будет через %1$d мин.</string>
    <string name="call_disp">Связь с диспетчером</string>
    <string name="call_disp_info">Запрос на связь с диспетчером успешно отправлен. Вам перезвонят в течении минуты.</string>
    <string name="title_error_net">Ошибка сети</string>
    <string name="valye_error_net">Отсутствует сеть интернет. Попробуйте позже при устойчивом соединении. Приложение будет закрыто</string>
    <string name="title_settig_locale">язык</string>
    <string name="value_nenu_locale">Язык</string>
    <string name="error_list_tarif_empty">Отсутствуют настройки тарифов, список пустой.</string>
    <string name="name_item_menu_setting">Настройки</string>
    <string name="title_private_adress">Мои адреса</string>
    <string name="value_num_card">Карта</string>
    <string name="name_cash">Наличные</string>
    <string name="delete_card_button">удалить</string>
    <string name="title_delete">Внимание</string>
    <string name="text_delete_card">будет удалена из списка способов оплаты</string>
    <string name="prefix_summ">от</string>
    <string name="error_add_card">Карта не добавлена</string>
    <string name="list_my_addresses">Мои адреса</string>
    <string name="value_def_no_bonuses">Заказать без бонусов</string>
    <string name="preorder_info_text_car">Предварительный заказ\nпринят на %1$s</string>
    <string name="button_change_order_text">Изменить заказ</string>
    <string name="to_reg_button_value">войти</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="title_urgent_dialog">высокий спрос</string>
    <string name="title_edit_summ">Изменение суммы</string>
    <string name="info_text_edit_cost">Вы можете увеличить сумму, чтобы привлечь больше водителей.\nПредрасчет текущей суммы:</string>
    <string name="set_def_cost">вернуть\nначальную сумму</string>
    <string name="edit_cost">изменить</string>
    <string name="continue_adress">Пропустить</string>
    <string name="private_money">Личный счет</string>
    <string name="b_s_d_text">Погасить долг</string>
    <string name="title_danger">Внимание!</string>
    <string name="info_part0">У вас имеется задолженность в сумме</string>
    <string name="info_part1">Оплата банковской картой возможна только после погашения долга. Погасите долг или выберите другой способ оплаты.</string>
    <string name="shange_number">изменить номер</string>
    <string name="order_from_here">Заказать отсюда</string>
    <string name="where_to_order">Заказать туда</string>
    <string name="edit_text">Редактировать</string>
    <string name="delete_text">Удалить</string>
    <string name="go_pay">Перейти к оплате</string>
    <string name="fupd_message">Доступна новая версия\nприложения.\nОбновить?</string>
    <string name="fupd_title">новая версия</string>
    <string name="fupd_text_no">не сейчас</string>
    <string name="fupd_text_yes">обновить</string>
    <string name="text_rem_location">чтобы улучшить работу приложения, выдайте ему необходимые разрешения</string>
    <string name="title_rem_gps">Приложению требуется :</string>
    <string name="gps_message_rem">Поиск ващего местоположения с помощью сети и GPS</string>
    <string name="close_dialog_rem">не сейчас</string>
    <string name="update_app_title">Пора обновить приложение</string>
    <string name="update_app_text">Текущая версия приложения больше не поддерживается. Обновите приложение и мы вернемся к работе.</string>
</resources>