<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="12dp">

    <ImageView
        android:id="@+id/button_hide_top_menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="-4dp"
        android:paddingBottom="12dp"
        android:paddingRight="24dp"
        android:paddingTop="12dp"
        app:srcCompat="@drawable/ic_clear_black_24dp" />

    <TextView
        android:id="@+id/name_select"
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="28dp" />


    <TextView
        android:id="@+id/action0"
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/order_from_here"
        android:textSize="21dp" />

    <TextView
        android:id="@+id/action1"
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/where_to_order"
        android:textSize="21dp" />

    <TextView
        android:id="@+id/action2"
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/edit_text"
        android:textSize="21dp" />

    <TextView
        android:id="@+id/action3"
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/delete_text"
        android:textSize="21dp" />

</LinearLayout>
