<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/BookText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/title_error_net"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/ic_call_48"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:src="?android:attr/alertDialogIcon" />

    <TextView
        android:id="@+id/fen_error_text"
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/valye_error_net"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

</LinearLayout>

