<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/BookText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/call_disp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ic_call_48"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_call_while_48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/call_disp_info"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>
