<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:layout_marginTop="-32dp"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="3dp"
    android:paddingTop="16dp">

    <TextView
        style="@style/CondensedBoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fupd_title"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_fupd_update" />

        <TextView
            android:id="@+id/fen_error_text"
            style="@style/LightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/fupd_message"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fupd_button_no"
            style="@style/CondensedBoldText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fupd_text_no"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/fupd_button_ok"
            style="@style/CondensedBoldText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fupd_text_yes"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp" />
    </LinearLayout>


</LinearLayout>