<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="108dp"
        android:background="@color/bg_while"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/CondensedBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="36dp"
            android:text="@string/text_rem_location"
            android:textAllCaps="true"
            android:textSize="18dp" />

        <TextView
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_rem_gps"
            android:textSize="14dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <ImageView

                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_set_location" />

            <TextView
                style="@style/LightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:includeFontPadding="false"
                android:text="@string/gps_message_rem"
                android:textSize="14dp" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/close_rem"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1">

                <TextView
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorAccent"
                    style="@style/CondensedBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/close_dialog_rem"
                    android:textAllCaps="true"
                    android:textSize="12dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/ok_rem"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1">

                <TextView
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorAccent"
                    style="@style/CondensedBoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/ok"
                    android:textAllCaps="true"
                    android:textSize="12dp" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
