<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/CondensedBoldText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:text="@string/shange_number"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp" />


    <TextView
        android:id="@+id/dialog_mess"
        style="@style/LightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_no"
            style="@style/CondensedBoldText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="80dp"
            android:gravity="center"
            android:text="@string/cancel_button_dialog_repl"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/dialog_yes"
            style="@style/CondensedBoldText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/continue_button_dialog_repl"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp" />
    </LinearLayout>


</LinearLayout>
